strapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
        app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: strapi/strapi
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
    name: strapi-svc
    labels: 
        app: strapi
spec: 
  ports:
  - name: strapi
    targetPort: 1337
    protocol: TCP
    port: 1337
  selector:
    app: strapi
