ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts: 
    - api.tp6.com
    secretName: strapi-cert
  rules:
  - host: api.tp6.com
    http:
      paths:
      - path: /
        backend:
            serviceName: strapi-svc
            servicePort: 1337
